objects/PC_RecordIdentifier__c.object
<CustomObject>
    <description>This object will consist of fields that would help to uniquely identify any record other than Account. For Accounts, use Account Identifier object</description>
    <fields>
        <fullName>PC_Assigner__c</fullName>
        <description>Name of the institution/vendor who allots/assigns the external Id</description>
        <inlineHelpText>Name of the institution/vendor who allots/assigns the external Id</inlineHelpText>
        <label>Assigner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RecordId__c</fullName>
        <description>Salesforce Id of the record whose external identifier needs to be stored</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce Id of the record whose external identifier needs to be stored</inlineHelpText>
        <label>Related Record Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <description>Type of the External Id</description>
        <inlineHelpText>Type of the External Id</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Infinitus</fullName>
                </value>
                <value>
                    <fullName>Internal Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Value__c</fullName>
        <description>Value of the External Identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>Value of the External Identifier</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Record Identifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_RecordId__c</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RIA-{0000}</displayFormat>
        <label>Record Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>